# BankScamShield

./: .gitignore  README.md  app.py  database.py  pyproject.toml  requirements.txt  scams.db
src/bankscammerscanner/: crew.py  main.py
src/bankscammerscanner/config/: agents.yaml  tasks.yaml
src/bankscammerscanner/tools/: custom_tool.py
templates/: index.html
