[project]
name = "bankscammerscanner"
version = "0.1.0"
description = "BankScammerScanner using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[google-genai,litellm,tools]==1.10.1",
    "flask>=3.1.3",
]

[project.scripts]
bankscammerscanner = "bankscammerscanner.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
